修改Base64加密、解密方法